ecmascript/parser/tests/typescript-errors/tsc/statements/breakStatements/invalidForBreakStatements/input.ts.stderr
error: A 'break' statement can only be used within an enclosing iteration or switch statement
 --> $DIR/tests/typescript-errors/tsc/statements/breakStatements/invalidForBreakStatements/input.ts:7:1
  |
7 | break;
  | ^^^^^^

error: A 'break' statement can only jump to a label of an enclosing statement
  --> $DIR/tests/typescript-errors/tsc/statements/breakStatements/invalidForBreakStatements/input.ts:11:9
   |
11 | for(;;) break TWO;
   |         ^^^^^^^^^^

error: A 'break' statement can only jump to a label of an enclosing statement
  --> $DIR/tests/typescript-errors/tsc/statements/breakStatements/invalidForBreakStatements/input.ts:17:9
   |
17 |         break TWO;
   |         ^^^^^^^^^^

error: A 'break' statement can only jump to a label of an enclosing statement
  --> $DIR/tests/typescript-errors/tsc/statements/breakStatements/invalidForBreakStatements/input.ts:24:9
   |
24 |         break THREE;
   |         ^^^^^^^^^^^^

error: A 'break' statement can only jump to a label of an enclosing statement
  --> $DIR/tests/typescript-errors/tsc/statements/breakStatements/invalidForBreakStatements/input.ts:30:5
   |
30 |     break FIVE;
   |     ^^^^^^^^^^^

error: A 'break' statement can only jump to a label of an enclosing statement
  --> $DIR/tests/typescript-errors/tsc/statements/breakStatements/invalidForBreakStatements/input.ts:39:5
   |
39 |     break NINE;
   |     ^^^^^^^^^^^

